<resources>
    <string name="app_name">Powerpuff Girls</string>
    <string name="kill_the_germs">Kill The Germs!</string>
    <string name="high_score">High Score</string>
    <string name="background">background</string>
    <string name="vol">vol</string>
    <string name="game_1">Game 1</string>
    <string name="game_2">Game 2</string>
    <string name="score">Score: %d</string>
    <string name="avoid_the_virus">Avoid The Virus!</string>
    <string name="highScore">High Score: %d</string>
    <string name="start">START</string>
    <string name="quit">QUIT</string>
    <string name="Restart">Restart</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="single_player">Single Player</string>
    <string name="online">Online</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="back">Back</string>
    <string name="label_player_turn">Turn</string>
    <string name="turn_human">Its yours</string>
    <string name="turn_computer">Computer</string>
    <string name="about_note"></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
