<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@drawable/backgroundbrick">

    <TextView
        android:id="@+id/scoreLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/score"
        android:textSize="18sp"
        android:textStyle="bold"
        android:paddingVertical="14dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:background="#ffffff"/>

    <FrameLayout
        android:id="@+id/gameFrame"
        android:layout_width="312dp"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:background="#ffffff">

        <ImageView
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_gravity="bottom"
            android:id="@+id/box"
            android:src="@drawable/box_right"
            android:visibility="invisible"
            tools:ignore="ContentDescription"/>

        <ImageView
            android:id="@+id/black"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/black"
            android:visibility="invisible"
            tools:ignore="ContentDescription"/>

        <ImageView
            android:id="@+id/orange"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/orange"
            android:visibility="invisible"
            tools:ignore="ContentDescription"/>

        <ImageView
            android:id="@+id/pink"
            android:layout_width="21dp"
            android:layout_height="21dp"
            android:src="@drawable/pink"
            android:visibility="invisible"
            tools:ignore="ContentDescription"/>

        <LinearLayout
            android:id="@+id/startLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/avoid_the_virus"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/highScoreLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:text="@string/highScore"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:onClick="startGame"
                android:text="@string/start" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:onClick="quitGame"
                android:text="@string/quit" />

        </LinearLayout>

        <Button
            android:id="@+id/restartButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:onClick="restartGame"
            android:layout_gravity="center"
            android:text="@string/Restart" />

    </FrameLayout>

</LinearLayout>