<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/background"
        android:scaleType="centerCrop"
        android:src="@drawable/background"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="466dp"
        android:layout_height="78dp"
        android:layout_above="@id/play"
        android:layout_below="@id/highScoreTxt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="11dp"
        android:fontFamily="casual"
        android:text="@string/kill_the_germs"
        android:textColor="#ffffff"
        android:textSize="65sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/highScoreTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="46dp"
        android:layout_marginRight="46dp"
        android:text="@string/high_score"
        android:textColor="#000000"
        android:textSize="24sp" />

    <ImageView
        android:id="@+id/volumeCtrl"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="6dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="15dp"
        android:src="@drawable/ic_baseline_volume_up_24"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="6dp"
        android:contentDescription="@string/vol" />

    <Button
        android:id="@+id/play"
        android:layout_width="164dp"
        android:layout_height="94dp"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="140dp"
        android:background="@drawable/fly2"
        android:fontFamily="sans-serif-condensed"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="45sp"
        android:gravity="center_horizontal" />

</RelativeLayout>